--- a/we-can-website/src/app.html
+++ b/we-can-website/src/app.html
@@ -4,11 +4,12 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="preload" href="/BackgroundTest.jpg" as="image">
+		<link rel="preload" href="/BackgroundTest.jpg" as="image" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover"
-		style="background-color: var(--color-success-500); color: var(--color-success-500);"
+	<body
+		data-sveltekit-preload-data="hover"
+		style="background-color: var(--color-success-500); color: var(--color-success-500)"
 	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
